[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dlmon"
version = "0.2.0"
description = "Runtime correctness monitor for PyTorch data pipelines"
readme = "README.md"
license = "MIT"
authors = [{name = "ArkaD171717"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "xxhash>=3.0",
]

[project.optional-dependencies]
vision = ["torchvision>=0.15", "Pillow"]
dev = [
    "pytest>=7.0",
    "numpy",
    "torchvision>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["dlmon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
